--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,30 +1,25 @@
-name: Final sprint project
+name: Yamdb workflow
 
 on: [push]
 
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-
     - name: Install dependencies
-      run: |
+      run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd api_yamdb/
-        pip install -r requirements.txt 
-
+        pip install -r api_yamdb/requirements.txt 
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
-        cd api_yamdb/
-        python manage.py test
+        pytest
 
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
@@ -41,9 +36,8 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Push to Docker Hub
-          # Пуш образа в Docker Hub 
-          # uses: docker/build-push-action@v2 
-          # with:
-          #   push: true
-          #   tags: denisbarinov/infra
- 
+          uses: docker/build-push-action@v2 
+          with:
+            push: true
+            tags: denisbarinov/infra
+            file: api_yamdb/Dockerfile
