--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.2.10
-Django==2.2.16
+django==2.2.16
 djangorestframework==3.12.4
 django-filter==2.2.0
 djangorestframework-simplejwt==4.7.2
@@ -8,6 +8,8 @@ requests==2.26.0
 pytz==2020.1
 sqlparse==0.3.1 
 gunicorn==20.0.4
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.3
+pytest==6.2.4
 pytest-django==4.5.2
+pytest-pythonpath==0.7.3
 python-dotenv==0.20.0
