--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Yamdb workflow
+name: yamdb_final_16sp workflow
 
 on: [push]
 
@@ -19,7 +19,7 @@ jobs:
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
-        cd api_yamdb/
+        python -m pytest
         python manage.py test
 
   build_and_push_to_docker_hub:
@@ -40,9 +40,10 @@ jobs:
           uses: docker/build-push-action@v2 
           with:
             push: true
+            context: api_yamdb
             tags: ${{ secrets.DOCKER_USERNAME }}/infra
             file: api_yamdb/Dockerfile
-  
+
   deploy:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
@@ -55,8 +56,10 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.PASSPHRASE }}
             script: |
-              sudo docker-compose stop
-              sudo docker-compose rm web
+              sudo docker compose stop
+              sudo docker compose down -v
+              sudo docker compose rm web
+              sudo docker pull  ${{ secrets.DOCKER_USERNAME }}/infra:v1
               touch .env
               echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
               echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -76,4 +79,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }}  Проект 16 спринта успешно выполнен! 
+        message: ${{ github.workflow }}  Проект 16 спринта успешно задеплоен! 
