--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,5 +2,5 @@ FROM python:3.7-slim
 WORKDIR /app
 COPY . .
 RUN pip3 install -r requirements.txt --no-cache-dir
-RUN pip install psycopg2-binary==2.9
-CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
+RUN pip3 install psycopg2-binary==2.9
+ENTRYPOINT ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000"]
