--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: denisbarinov/infra
+    image: denisbarinov/infra:v1
     restart: always
     volumes:
       - static_value:/app/static/
@@ -20,7 +20,6 @@ services:
 
   nginx:
     image: nginx:1.21.3-alpine
-    
     ports:
       - "8888:8888"
 
